--- a/css/header.css
+++ b/css/header.css
@@ -1,3 +1,45 @@
-html {
-    background-color: aqua;
+@font-face {
+    font-family: GameFont;
+    src: url(../fonts/PressStart2P-2.14/PressStart2P.ttf);
+}
+
+
+
+#header_background {
+    width: 100%;
+    height: 150px;
+
+    background: linear-gradient(180deg, rgb(0, 0, 0) 0%, rgba(0, 0, 0, 0) 100%);
+
+    position: fixed;
+    left: 0px;
+    top: 0px;
+}
+
+#mini_title {
+    color: rgb(23, 228, 0);
+    font-family: GameFont;
+    font-size: 25px;
+    
+    position: fixed;
+    top: 20px;
+    left: 20px;
+}
+
+#page_selector {
+    position: fixed;
+    top: 35px;
+    right: 20px;
+
+    width: 250px;
+
+    border-radius: 20px;
+
+    color: rgb(23, 228, 0);
+    font-family: GameFont;
+    font-size: 20px;
+
+    background-color: rgb(36, 36, 36);
+
+    padding: 10px;
 }
